refactored dealing with Session

--- a/.env.dist
+++ b/.env.dist
@@ -1,2 +1,10 @@
-POSTGRES_USER=af
-POSTGRES_PASSWORD=af
+POSTGRES_USER=foo
+POSTGRES_PASSWORD=foo
+DBHOST=postgres
+DBPORT=5432
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
+
+APIPORT=8000
