added logger and only_new arg to fetch all

--- a/mypy.ini
+++ b/mypy.ini
@@ -19,3 +19,6 @@ ignore_missing_imports = True
 
 [mypy-rq_scheduler]
 ignore_missing_imports = True
+
+[mypy-loguru]
+ignore_missing_imports = True
