--- a/tests/.env.test
+++ b/tests/.env.test
@@ -9,4 +9,6 @@ REDIS_DB=0
 
 APIPORT=8000
 
-TARGET_URL=faketarget:8099/index.html
+TARGET_URL=http://faketarget:8099/index.html
+
+TESTURL=http://api:8000/posts
