--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     restart: "unless-stopped"
     build:
       context: ./
-      dockerfile: ./build/api/Dockerfile
+      dockerfile: ./build/Dockerfile
     ports:
       - "8000:8000"
     depends_on:
@@ -34,12 +34,13 @@ services:
       - app_net
     env_file:
       - .env
+    command: gunicorn --bind 0.0.0.0:${APIPORT:-8000} --workers=${WORKERS:-5} server:app
 
   rqworker:
     restart: "unless-stopped"
     build:
       context: ./
-      dockerfile: ./build/rqworker/Dockerfile
+      dockerfile: ./build/Dockerfile
     depends_on:
       - redis
       - postgres
@@ -47,12 +48,13 @@ services:
       - app_net
     env_file:
       - .env
+    command: rq worker --url=redis://${REDIS_HOST}:${REDIS_PORT}/${REDIS_DB} high default low 
   
   parser: 
     restart: "unless-stopped"
     build:
       context: ./
-      dockerfile: ./build/parser/Dockerfile
+      dockerfile: ./build/Dockerfile
     depends_on:
       - redis
       - postgres
@@ -60,6 +62,7 @@ services:
       - app_net
     env_file:
       - .env
+    command: python parser.py && rqscheduler --host ${REDIS_HOST} --port ${REDIS_PORT} --db ${REDIS_DB}
 
 networks:
   app_net:
