--- a/tests/.env.test
+++ b/tests/.env.test
@@ -1,15 +1,15 @@
 POSTGRES_USER=test
 POSTGRES_PASSWORD=test
-DBHOST=postgres_test
+DBHOST=postgres
 DBPORT=5432
 
-REDIS_HOST=redis_test
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=0
 
 APIPORT=8000
+WORKERS=3
 
 TARGET_URL=http://faketarget:8099/index.html
 
 TESTURL=http://api:8000/posts
-TEST=true
